--- a/firstSetup/package.json
+++ b/firstSetup/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "firstSetup",
+  "name": "tugas2",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -10,8 +10,14 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "axios": "^0.21.1",
+    "chroma-js": "^2.1.1",
+    "json-server": "^0.16.3",
     "react": "17.0.1",
-    "react-native": "0.64.0"
+    "react-native": "0.64.0",
+    "react-native-uuid": "^2.0.1",
+    "seedrandom": "^3.0.5",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
